# Tetris

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Rapports/Analyse/: README.md  tetris.mdj
model/: README.md
rapports/console/: README.md  tetrisV2.mdj
src/: .gitignore  CMakeLists.txt
src/Tetris_model/: Bag.h  Block.h  CMakeLists.txt  Color.h  Game.h  GameTypeLines.h  GameTypeScore.h  Grid.h  Line.cpp  Line.h  MoveDirection.h  RotateDirection.h  Tetromino.cpp  Tetromino.h  main.cpp
src/Tetris_model/util/: maxVectorSize.hpp
src/common/: ActionType.h  CMakeLists.txt  Observable.cpp  Observable.h  Observer.h
src/controller/: GameType.h  ValueToReach.h
src/controller/console/: CMakeLists.txt  Controller.cpp  Controller.h  GameType.h  Interactions.cpp  Interactions.h  main.cpp
src/controller/gui/: CMakeLists.txt  GameController.cpp  GameController.h  MenuController.cpp  MenuController.h
src/model/: Bag.cpp  Bag.h  Block.cpp  CMakeLists.txt  Color.h  Game.cpp  Game.h  GameTypeLines.h  GameTypeScore.h  GameTypeTime.h  GameTypes.cpp  Games.h  Grid.cpp  Grid.h  Line.cpp  Line.h  Tetromino.cpp  Tetromino.h  main.cpp
src/model/util/: maxVectorSize.hpp  outOfRangeMessage.hpp  random.hpp
src/view/console/: BasicDisplay.cpp  BasicDisplay.h  CMakeLists.txt  ConsoleView.cpp  ConsoleView.h  Display.hpp
src/view/gui/: CMakeLists.txt  GameGridDisplay.cpp  GameGridDisplay.h  MainWindow.cpp  MainWindow.h  MenuScene.cpp  MenuScene.h  NextTetromino.cpp  NextTetromino.h  NextTetrominoDisplay.cpp  NextTetrominoDisplay.h  ScoreBoard.cpp  ScoreBoard.h  TetrisScene.cpp  TetrisScene.h  TetrisWindow.cpp  TetrisWindow.h  main.cpp  mainwindow.cpp
src/view/gui/util/: QtColors.hpp
tests/: BagTest.cpp  BlockTestUtils.hpp  CMakeLists.txt  LineTest.cpp  TetrominoTestUtils.hpp  main.cpp
